--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,120 @@
-{{page-title "MelsumnerWebsite"}}
+{{page-title "Melanie Sumner"}}
+<header class="py-10">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h1 class="text-6xl font-bold text-blue-darkest">
+      Melanie Sumner
+      <br/><div class="text-lg font-sans tracking-widest uppercase">Webmaster | Accessibility SME</div>
+    </h1>
+  </div>
+</header>
 
-{{outlet}}
+
+<main class="mt-4">
+  <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
+    <!-- Replace with your content -->
+
+
+    <div class="bg-blue-lightest text-blue-darkest overflow-hidden shadow sm:rounded-lg mb-8">
+      <div class="px-4 py-5 sm:p-6">
+        <h2 class="text-orange text-3xl">TL;DR</h2>
+        <p class="text-base text-blue-darkest text-lg">I'm a decorated, disabled military veteran turned programmer with a psychology degree. I started writing code as a hobby in 1997. I love making things for the web; currently my focus is accessibility (at scale) on the front-end. Some of my strengths include the ability to balance what needs to be done now while also considering how things need to be in the future, and the ability to work independently; I can see what needs to be done and excel at making ideas happen.</p>
+      </div>
+    </div>
+
+
+    <ul role="list" class="grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-4 xl:gap-x-8">
+      <li class="relative rounded-lg bg-orange text-beige-lighter">
+        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+          <img src="/assets/images/graphic-moon.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none" />
+          <button type="button" class="absolute inset-0">
+            <span class="sr-only">...</span>
+          </button>
+        </div>
+        <p class="mt-2 block text-base font-medium truncate px-2 pt-0.5"><a href="https://gist.github.com/MelSumner/a0ccfcbe85131d1a7bc8645fb890df5d" rel="external" class="underline text-blue-lighter hover:text-blue">View Resume</a></p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Read my resume & get to know my work experience</p>
+      </li>
+
+      <li class="relative rounded-lg bg-orange text-beige-lighter">
+        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+          <img src="/assets/images/graphic-desert.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <button type="button" class="absolute inset-0">
+            <span class="sr-only">...</span>
+          </button>
+        </div>
+        <p class="mt-2 block text-base font-medium truncate px-2 pt-0.5"><a href="https://noti.st/melsumner" rel="external" class="underline text-blue-lighter hover:text-blue-darker">Speaker Profile</a></p>
+        <p class="block text-sm font-medium px-2 pt-0.5 pb-3">View my speaker profile on Noti.st, and see the talks I've given.</p>
+      </li>
+
+      <li class="relative rounded-lg bg-orange text-beige-lighter">
+        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+          <img src="/assets/images/graphic-mountains.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <button type="button" class="absolute inset-0">
+            <span class="sr-only">GitHub Profile (external link)</span>
+          </button>
+        </div>
+        <p class="mt-2 block text-base font-medium truncate px-2 pt-0.5"><a href="https://github.com/MelSumner" rel="external" class="underline text-blue-lighter hover:text-blue-darker">GitHub Profile</a></p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Get to know my code by taking a look through my GitHub repository.</p>
+      </li>
+
+      <li class="relative rounded-lg bg-orange text-beige-lighter">
+        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+          <img src="/assets/images/graphic-palms.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <button type="button" class="absolute inset-0">
+            <span class="sr-only">...</span>
+          </button>
+        </div>
+        <p class="mt-2 block text-base font-medium truncate px-2 py-0.5"><a href="https://a11y-automation.dev/" rel="external" class="underline text-blue-lighter hover:text-blue-darker">Project: A11y Automation Tracker</a></p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Take a look through one of my favorite personal projects, A11y Automation Tracker.</p>
+      </li>
+
+      <li class="relative rounded-lg bg-orange text-beige-lighter">
+        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+          <img src="/assets/images/graphic-tall-palms.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <button type="button" class="absolute inset-0">
+            <span class="sr-only">...</span>
+          </button>
+        </div>
+        <p class="mt-2 block text-base font-medium truncate px-2 pt-0.5"><a href="https://codepen.io/melsumner" rel="external" class="underline text-blue-lighter hover:text-blue-darker">CodePen</a></p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Checkout some of the UI work I've done on CodePen!</p>
+      </li>
+
+      <li class="relative rounded-lg bg-orange text-beige-lighter">
+        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+          <img src="/assets/images/graphic-mountains.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <button type="button" class="absolute inset-0">
+            <span class="sr-only">...</span>
+          </button>
+        </div>
+        <p class="mt-2 block text-base font-medium truncate px-2 pt-0.5"><a href="https://emberjs-1.gitbook.io/ember-component-patterns/" rel="external" class="underline text-blue-lighter hover:text-blue-darker">Project: Ember Component Patterns</a></p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">See how to make accessible components in Ember. Learn not only what good patterns look like, but what patterns should be avoided.</p>
+      </li>
+
+      <li class="relative rounded-lg bg-orange text-beige-lighter">
+        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+          <img src="/assets/images/graphic-mountains.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <button type="button" class="absolute inset-0">
+            <span class="sr-only">...</span>
+          </button>
+        </div>
+        <p class="mt-2 block text-base font-medium truncate pointer-events-none px-2 pt-0.5"><a href="" rel="external" class="underline text-blue-lighter hover:text-blue-darker">Project</a></p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Description</p>
+      </li>
+
+      <li class="relative rounded-lg bg-orange text-beige-lighter">
+        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+          <img src="/assets/images/graphic-mountains.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <button type="button" class="absolute inset-0">
+            <span class="sr-only">...</span>
+          </button>
+        </div>
+        <p class="mt-2 block text-base font-medium truncate px-2 pt-0.5"><a href="" rel="external" class="underline text-blue-lighter hover:text-blue-darker">Project</a></p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Description</p>
+      </li>
+    </ul>
+
+
+    {{outlet}}
+    <!-- /End replace -->
+  </div>
+</main>
+
