--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -15,9 +15,9 @@
 
     <div class="bg-blue-lightest text-blue-darkest overflow-hidden shadow sm:rounded-lg mb-8">
       <div class="px-4 py-5 sm:p-6">
-        <h2 class="text-orange text-3xl">TL;DR</h2>
-        <p class="text-base text-blue-darkest text-lg pt-4">I'm a decorated, disabled military veteran turned programmer with a psychology degree. I started writing code as a hobby in 1997, and turned it into my full-time career in 2010. I love making things for the web; currently my focus is accessibility (at scale) on the front-end.</p>
-        <p class="text-base text-blue-darkest text-lg pt-4">Some of my strengths include the ability to balance what needs to be done now while also considering how things need to be in the future, and the ability to work independently; I excel at collaboratively making ideas happen.</p>
+        <p class="text-4xl font-serif text-orange-darker">Hello there!</p>
+        <p class="text-lg pt-4">I'm a decorated, disabled military veteran turned programmer. I started writing code as a hobby in 1997, and turned it into my full-time career in 2010. I love making things for the web; currently my focus is digital accessibility (a11y) at scale.</p>
+        <p class="text-lg pt-4">Some of my strengths include the ability to balance what needs to be done now while also considering how things need to be in the future; I also excel at collaboratively making ideas happen.</p>
       </div>
     </div>
 
@@ -53,7 +53,7 @@
           </button>
         </div>
         <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://github.com/MelSumner" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-darker">Browse my Code</a></p>
-        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Get to know my code by taking a look through my GitHub repository.</p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Take a look through my GitHub repositories and get to know my code.</p>
       </li>
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
