--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -100,7 +100,7 @@ body {
 	background-image: url("/assets/images/site-background.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-attachment: fixed;
+	/* background-attachment: fixed; */
 	background-position: bottom left, 0px 0px;
   background-origin: border-box;
   font-size: 18px;
