--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -24,92 +24,53 @@
 
     <ul role="list" class="grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6">
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
-        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+        <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
           <img src="/assets/images/graphic-moon.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none" />
-          <button type="button" class="absolute inset-0">
-            <span class="sr-only">...</span>
-          </button>
         </div>
-        <p class="mt-2 block text-base font-bold truncate px-2 pt-0.5"><a href="https://gist.github.com/MelSumner/a0ccfcbe85131d1a7bc8645fb890df5d" rel="external" class="hover:underline tracking-widest uppercase text-blue-lighter hover:text-blue">View Resume</a></p>
+        <p class="mt-2 block text-base font-bold truncate px-2 pt-0.5"><a href="https://gist.github.com/MelSumner/a0ccfcbe85131d1a7bc8645fb890df5d" rel="external" class="hover:underline tracking-widest uppercase text-blue-lighter hover:text-blue-200">View Resume</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Read my resume and get to know my work experience.</p>
+
       </li>
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
-        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+        <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
           <img src="/assets/images/graphic-desert.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
-          <button type="button" class="absolute inset-0">
-            <span class="sr-only">...</span>
-          </button>
         </div>
-        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://noti.st/melsumner" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue">Watch My Talks</a></p>
+        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://noti.st/melsumner" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-200">Watch My Talks</a></p>
         <p class="block text-sm font-medium px-2 pt-0.5 pb-3">View my speaker profile on Noti.st, and see the talks I've given.</p>
       </li>
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
-        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+        <div class=" group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
           <img src="/assets/images/graphic-forest-mtn.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
-          <button type="button" class="absolute inset-0">
-            <span class="sr-only">GitHub Profile (external link)</span>
-          </button>
         </div>
-        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://github.com/MelSumner" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-darker">Browse my Code</a></p>
+        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://github.com/MelSumner" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-200">Browse my Code</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Take a look through my GitHub repositories and get to know my code.</p>
       </li>
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
-        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+        <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
           <img src="/assets/images/graphic-palms.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
-          <button type="button" class="absolute inset-0">
-            <span class="sr-only">...</span>
-          </button>
         </div>
-        <p class="mt-2 block text-base truncate px-2 py-0.5"><a href="https://a11y-automation.dev/" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-darker">A11y Automation Tracker</a></p>
-        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Take a look through one of my favorite personal open-source projects, A11y Automation Tracker.</p>
+        <p class="mt-2 block text-base truncate px-2 py-0.5"><a href="https://a11y-automation.dev/" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-200">A11y Automation Tracker</a></p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Take a look through my personal open-source project, A11y Automation Tracker.</p>
       </li>
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
-        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+        <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
           <img src="/assets/images/untitled-3.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
-          <button type="button" class="absolute inset-0">
-            <span class="sr-only">...</span>
-          </button>
         </div>
-        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://codepen.io/collection/nVPGQL" rel="external" class="hover:underline tracking-widest uppercase font-bold  text-blue-lighter hover:text-blue-darker">CodePen: A11y Collection</a></p>
+        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://codepen.io/collection/nVPGQL" rel="external" class="hover:underline tracking-widest uppercase font-bold  text-blue-lighter hover:text-blue-200">CodePen: A11y Collection</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Browse my collection of a11y-focused UI creations.</p>
       </li>
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
-        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
+        <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
           <img src="/assets/images/graphic-forest-night.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
-          <button type="button" class="absolute inset-0">
-            <span class="sr-only">...</span>
-          </button>
         </div>
-        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://emberjs-1.gitbook.io/ember-component-patterns/" rel="external" class="hover:underline tracking-widest uppercase font-bold  text-blue-lighter hover:text-blue-darker">Ember Component Patterns</a></p>
+        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://emberjs-1.gitbook.io/ember-component-patterns/" rel="external" class="hover:underline tracking-widest uppercase font-bold  text-blue-lighter hover:text-blue-200">Ember Component Patterns</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Read through my guide for how to make accessible components in Ember.</p>
       </li>
-
-      {{!-- <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
-        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
-          <img src="/assets/images/graphic-moon-mtn-01.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
-          <button type="button" class="absolute inset-0">
-            <span class="sr-only">...</span>
-          </button>
-        </div>
-        <p class="mt-2 block text-base font-medium truncate pointer-events-none px-2 pt-0.5"><a href="" rel="external" class="underline text-blue-lighter hover:text-blue-darker">Project</a></p>
-        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Description</p>
-      </li> --}}
-
-      {{!-- <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
-        <div class="focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500 group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
-          <img src="/assets/images/graphic-forest-mtn.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
-          <button type="button" class="absolute inset-0">
-            <span class="sr-only">...</span>
-          </button>
-        </div>
-        <p class="mt-2 block text-base font-medium truncate px-2 pt-0.5"><a href="" rel="external" class="underline text-blue-lighter hover:text-blue-darker">Project</a></p>
-        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Description</p>
-      </li> --}}
     </ul>
 
 
