updated link to notist to point to recent

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -36,7 +36,7 @@
         <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
           <img src="/assets/images/graphic-desert.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
         </div>
-        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://noti.st/melsumner" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-200">Watch My Talks</a></p>
+        <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://noti.st/melsumner#recent" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-200">Watch My Talks</a></p>
         <p class="block text-sm font-medium px-2 pt-0.5 pb-3">View my speaker profile on Noti.st, and see the talks I've given.</p>
       </li>
 
