--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -61,7 +61,7 @@
           <img src="/assets/images/untitled-3.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
         </div>
         <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://codepen.io/collection/nVPGQL" rel="external" class="hover:underline tracking-widest uppercase font-bold  text-blue-lighter hover:text-blue-200">CodePen: A11y Collection</a></p>
-        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Browse my collection of a11y-focused UI creations.</p>
+        <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Browse a collection of my a11y-focused UI creations.</p>
       </li>
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
