--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,8 +11,6 @@
 
 <main class="mt-4">
   <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
-    <!-- Replace with your content -->
-
     <div class="bg-blue-lightest text-blue-darkest overflow-hidden shadow sm:rounded-lg mb-8">
       <div class="px-4 py-5 sm:p-6">
         <p class="text-4xl font-serif text-orange-darker">Hello there!</p>
@@ -25,7 +23,7 @@
     <ul role="list" class="grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6">
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
         <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
-          <img src="/assets/images/graphic-moon.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none" />
+          <img src="/assets/images/graphic-moon.svg" alt="" class="object-cover pointer-events-none" role="none" />
         </div>
         <p class="mt-2 block text-base font-bold truncate px-2 pt-0.5"><a href="https://gist.github.com/MelSumner/a0ccfcbe85131d1a7bc8645fb890df5d" rel="external" class="hover:underline tracking-widest uppercase text-blue-lighter hover:text-blue-200">View Resume</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Read my resume and get to know my work experience.</p>
@@ -34,7 +32,7 @@
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
         <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
-          <img src="/assets/images/graphic-desert.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <img src="/assets/images/graphic-desert.svg" alt="" class="object-cover pointer-events-none" role="none">
         </div>
         <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://noti.st/melsumner#recent" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-200">Watch My Talks</a></p>
         <p class="block text-sm font-medium px-2 pt-0.5 pb-3">View my speaker profile on Noti.st, and see the talks I've given.</p>
@@ -42,7 +40,7 @@
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
         <div class=" group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
-          <img src="/assets/images/graphic-forest-mtn.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <img src="/assets/images/graphic-forest-mtn.svg" alt="" class="object-cover pointer-events-none" role="none">
         </div>
         <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://github.com/MelSumner" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-200">Browse my Code</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Take a look through my GitHub repositories and get to know my code.</p>
@@ -50,7 +48,7 @@
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
         <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
-          <img src="/assets/images/graphic-palms.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <img src="/assets/images/graphic-palms.svg" alt="" class="object-cover pointer-events-none" role="none">
         </div>
         <p class="mt-2 block text-base truncate px-2 py-0.5"><a href="https://a11y-automation.dev/" rel="external" class="hover:underline tracking-widest uppercase font-bold text-blue-lighter hover:text-blue-200">A11y Automation Tracker</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Take a look through my personal open-source project, A11y Automation Tracker.</p>
@@ -58,7 +56,7 @@
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
         <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
-          <img src="/assets/images/untitled-3.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <img src="/assets/images/untitled-3.svg" alt="" class="object-cover pointer-events-none" role="none">
         </div>
         <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://codepen.io/collection/nVPGQL" rel="external" class="hover:underline tracking-widest uppercase font-bold  text-blue-lighter hover:text-blue-200">CodePen: A11y Collection</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Browse a collection of my a11y-focused UI creations.</p>
@@ -66,16 +64,13 @@
 
       <li class="relative rounded-lg bg-orange text-beige-lighter shadow">
         <div class="group block w-full aspect-w-10 aspect-h-7 rounded-lg overflow-hidden">
-          <img src="/assets/images/graphic-forest-night.svg" alt="" class="group-hover:opacity-75 object-cover pointer-events-none" role="none">
+          <img src="/assets/images/graphic-forest-night.svg" alt="" class="object-cover pointer-events-none" role="none">
         </div>
         <p class="mt-2 block text-base truncate px-2 pt-0.5"><a href="https://emberjs-1.gitbook.io/ember-component-patterns/" rel="external" class="hover:underline tracking-widest uppercase font-bold  text-blue-lighter hover:text-blue-200">Ember Component Patterns</a></p>
         <p class="block text-sm font-medium pointer-events-none px-2 pt-0.5 pb-3">Read through my guide for how to make accessible components in Ember.</p>
       </li>
     </ul>
-
-
     {{outlet}}
-    <!-- /End replace -->
   </div>
 </main>
 
@@ -102,12 +97,10 @@
           <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
         </svg>
       </a>
-
-
     </div>
     <div class="mt-8 md:mt-0 md:order-1">
       <p class="text-center text-base text-white">
-        &copy; 2021 Melanie Sumner. All rights reserved.
+        See an problem? <a href="https://github.com/MelSumner/melsumner-website/issues" class="underline text-blue-lightest hover:text-blue-300" rel="external">File an issue</a> on GitHub.
       </p>
     </div>
   </div>
