--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -15,7 +15,7 @@
       <div class="px-4 py-5 sm:p-6">
         <p class="text-4xl font-serif text-orange-darker">Hello there!</p>
         <p class="text-lg pt-4">I'm a decorated, disabled military veteran turned programmer. I started writing code as a hobby in 1997, and turned it into my full-time career in 2010. I love making things for the web; currently my focus is digital accessibility (a11y) at scale.</p>
-        <p class="text-lg pt-4">Some of my strengths include the ability to balance what needs to be done now while also considering how things need to be in the future; I also excel at collaboratively making ideas happen.</p>
+        <p class="text-lg pt-4">My strengths include strategic thinking, especially the ability to balance what needs to be done now while also considering how things need to be in the future. I also excel at collaboratively making ideas happen.</p>
       </div>
     </div>
 
