--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <h1 class="text-6xl font-bold text-blue-darkest">
       Melanie Sumner
-      <br/><div class="text-lg font-sans tracking-widest uppercase">Webmaster | Accessibility SME</div>
+      <br/><div class="text-lg font-sans tracking-widest uppercase">Accessibility Specialist</div>
     </h1>
   </div>
 </header>
