--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -87,26 +87,185 @@
   background-color: #f7efdc;
 }
 
-
-h1 {
-  font-family: 'analogueregular';
-  @apply text-5xl;
-}
-
 body {
   background-color: #c6dce5;
   color: #1d2c36;
   @apply min-h-screen;
-	background-image: url("/assets/images/site-background.svg");
+  font-size: 18px;
+  line-height: 1.2;
+  background-image: url("/assets/images/site-background.svg");
 	background-attachment: fixed;
 	background-position: bottom left, 0px 0px;
 	background-repeat: no-repeat;
 	background-size: cover;
   background-origin: border-box;
-  font-size: 18px;
-  line-height: 1.2;
 }
 
 main {
   @apply min-h-screen;
+}
+
+header {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+nav ul li a {
+  border-color: transparent;
+  display: flex;
+  font-weight: bold;
+  text-transform: uppercase;
+  @apply p-4;
+}
+nav ul li a:visited {
+  /* use whatever the browser does */
+}
+nav ul li a:hover {
+  text-decoration: underline;
+}
+nav ul li a:focus {
+  /* use native browser focus */
+}
+nav ul li a:active {
+  transform: translateY(1px);
+}
+
+h1 {
+  font-family: 'analogueregular';
+  @apply text-5xl;
+}
+h2 {
+  font-family: 'analogueregular';
+  font-weight:bold;
+  @apply 
+  text-4xl;
+}
+h3 {
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+h4 {
+  font-weight: bold;
+}
+
+main article {
+  background-color: white;
+  border-radius: 4px;
+  opacity: 0.8;
+  @apply 
+  p-8
+  mb-8;
+}
+
+.intro {
+  font-family: 'analogueregular';
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 1;
+}
+
+/* From https://inclusive-components.design/cards/ */
+.cards > ul {
+  list-style: none;
+}
+
+.card + .card {
+  margin-top: 1.5rem;
+}
+
+@supports (display: grid) {
+  .cards > ul {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+      grid-column-gap: 1.5rem;
+      grid-row-gap:1.5rem;
+  }
+
+  .card + .card {
+      margin-top: 0;
+  }
+}
+
+.card {
+  border: 1px solid;
+  border-radius: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.card .text {
+  padding: 1rem;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.card p {
+  max-width: 60ch;
+}
+
+.card .img {
+  height: 6.5rem;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 1rem));
+}
+
+.card .img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* filter: grayscale(100%); */
+}
+
+.card a {
+  text-decoration: none;
+}
+
+.card a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.card a:focus {
+  outline: none;
+  text-decoration: underline;
+}
+
+.card:focus-within, .card:hover {
+  box-shadow: 0 0 0 0.25rem;
+}
+
+.card:focus-within a:focus {
+  text-decoration: none;
+}
+
+.card small {
+  display: block;
+}
+
+.card .text > * + * {
+  margin-top: 0.75rem;
+}
+
+.card .text > :last-child {
+  margin-top: auto;
+  padding-top: 0.75rem;
 }
