--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -42,7 +42,7 @@
     </div>
     <div class="mt-8 md:mt-0 md:order-1">
       <p class="text-center text-base text-white">
-        See an problem? <a href="https://github.com/MelSumner/melsumner-website/issues" class="underline text-blue-lightest hover:text-blue-300" rel="external">File an issue</a> on GitHub.
+        See a problem? <a href="https://github.com/MelSumner/melsumner-website/issues" class="underline text-blue-lightest hover:text-blue-300" rel="external">File an issue</a> on GitHub.
       </p>
     </div>
 </footer>
