switched up the clip-path

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
   <NavigationNarrator />
     <h1 class="text-6xl font-bold text-blue-darkest">
       Melanie Sumner
-      <br/><div class="text-lg font-sans tracking-widest uppercase">Accessibility Engineer, Speaker, & Author</div>
+      <br/><div class="text-lg font-sans font-normal">Accessibility Engineer, Speaker, & Author</div>
     </h1>
     <nav>
       <ul>
