--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
 }}
 <article>
   <p class='intro'>
-    The goal of my work: make it easier for web developers to make accessible
+    My goal: make it easier for web developers to make accessible
     websites.
   </p>
   <p class='mt-4'>
@@ -22,7 +22,8 @@
     out! I always know a few solid candidates.
   </p>
 
-  <h2 class="my-4">Projects</h2>
+  <h2 class="mt-8">Projects</h2>
+  <p class="my-4">I've done a few projects that I particularly care about. Here are a few.</p>
   <div class="cards mx-auto">
     <ul class="mx-auto">
         <li class="card">
