--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -162,6 +162,10 @@ h4 {
   font-weight: bold;
 }
 
+p a {
+  text-decoration: underline;
+}
+
 main article {
   background-color: white;
   border-radius: 4px;
@@ -172,7 +176,7 @@ main article {
 }
 
 .intro {
-  font-family: 'analogueregular';
+  /* font-family: 'analogueregular'; */
   font-size: 2rem;
   font-weight: bold;
   line-height: 1;
@@ -222,6 +226,10 @@ main article {
 .card .img {
   height: 6.5rem;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 1rem));
+}
+.card:nth-of-type(2n) .img {
+  height: 6.5rem;
+  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1rem), 0 100%);
 }
 
 .card .img img {
