make linters happy

--- a/app/templates/resume.hbs
+++ b/app/templates/resume.hbs
@@ -1,103 +1,46 @@
 {{page-title "Melanie Sumner's Resume"}}
 <article class="p-8">
-<h2>Melanie Sumner - Software Engineer</h2>
-<p>Likes: Web Standards, accessibility, and Ember.js.</p>
 
-<h3 class="py-4">Work Experience (1/6)</h3>
+<h2 class="pb-4">Work Experience</h2>
 
-<h4>Senior Design Systems Engineer, HashiCorp</h4>
+<h3>Senior Design Systems Engineer, HashiCorp</h3>
 <p>Part of HashiCorp's Design Systems team, focusing on accessibility and Ember in design system components. Invited expert in the WAI-ARIA working group and co-editor of the Accessible Name (ACCNAME) specification. Active member of the Ember.js core framework team, leading the efforts to make Ember accessible by default.</p>
 
-<h4 class="pt-4">Senior Software Engineer, LinkedIn</h4>
+<h3 class="pt-4">Senior Software Engineer, LinkedIn</h3>
 <p>
     Accessibility engineer working on Ember.js, the open source software(OSS) that powers LinkedIn. Created accessibility tooling for developers, specifically to enable them to craft more accessible code. Active member of the Ember.js core framework team; lead the efforts to make Ember accessible by default. Traveled and spoke about accessibility and Ember at technical and accessibility conferences world-wide. Represented LinkedIn as a member of the WAI-ARIA working group.
 </p>
 <small>Used JavaScript (Ember & Node).</small>
 
-<h4 class="pt-4">VP, Corporate & Investment Bank, JP Morgan Chase</h4>
+<h3 class="pt-4">VP, Corporate & Investment Bank, JP Morgan Chase</h3>
 <p>
 Application architect/accessibility SME for a fully-compliant(ADA), Ember.js-based framework and member of the product management team. I led the architecture and design for new web components used in the primary corporate and investment banking application, providing instruction for accessibility patterns when needed. My team specifically focused on the strategic vision of the project. I advised new internal groups who want to use our product, wrote tutorials and articles to help the internal Ember community have the tools they needed to successfully build their applications, and regularly met with executive management to review priorities and determine the best way to meet current and future goals. I also regularly attended internal events and spoke about our product with a focus on the accessibility features.
 </p>
 <small>Used Ember, Node, HTML, CSS, and GAIA (internal cloud PAAS).</small>
 
-<h4 class="pt-4">Software Consultant, Productive Edge</h4>
+<h3 class="pt-4">Software Consultant, Productive Edge</h3>
 <p>
     Software consultant in a senior front-end developer role. Lead developer for company's website re-design. Regularly integrated with enterprise client teams in fields such as Travel and Health Insurance. Promoted cross-functionality by regularly knowledge-sharing with designers, business analysts, project managers, and other developers.
 </p>
 <small>Used Angular(1), PHP, HTML, JS, and CSS.</small>
 
-<h4 class="pt-4">Application Analyst, Office of University Development, UNC Chapel Hill</h4>
+<h3 class="pt-4">Application Analyst, Office of University Development, UNC Chapel Hill</h3>
 <p>
     Designed & developed responsive websites to support University fundraising efforts, including the UNC Commencement Website. Configured and maintained servers for self-hosted WordPress sites. Provided consultation for development units regarding fundraising website and email solicitation needs including SEO, accessibility, and user experience. Refactored legacy code to use responsive web design, and developed custom features for the internal CRM product.
 </p>
 <small>Used PHP, WordPress, C#, asp.net, HTML, JS, CSS, Node (for APIs) and Windows servers.</small>
 
-<h4 class="pt-4">Communications Specialist, Department of Environmental Science and Engineering, UNC Chapel Hill</h4>
+<h3 class="pt-4">Communications Specialist, Department of Environmental Science and Engineering, UNC Chapel Hill</h3>
 <p>
     Designed and develop website and applications for internal administrative use and official department information distribution. Created custom WordPress websites for faculty. Voluntarily adopted role as Information Security Liaison- coordinated with the Information Security Office to develop end-user training, process to maintain records per University policy, and pursue additional methods of security within the department for the protection of sensitive and intellectual data.
 </p>
 <small>Used PHP, WordPress, HTML, JS, CSS and Windows Servers.</small>
 
-<h4 class="pt-4">Intelligence Analyst, United States Navy</h4>
+<h3 class="pt-4">Intelligence Analyst, United States Navy</h3>
 <p>
     Enlisted as a Middle Eastern language and event analyst in a top-secret (SC/SCI) environment. Provided written operation and statistical analysis reports. Wrote and maintained training manuals and coordinated training schedules. Held a concurrent, voluntary appointment as an information systems security officer (ISSO). Enlistment ended with multiple decorations (see Awards) and an honorable discharge.
 </p>
 
-<h3 class="py-4">Public Speaking (2/6)</h3>
-<ul class="list-decimal list-inside">
-    <li>Speaker, EmberFest 2021: "Accessibility is Reach"</li>
-    <li>Speaker, A11yCamp Bay Area, 2021: "Accessible Productivity"</li>
-    <li>Speaker, EmberConf 2021: "Continuous Accessibility"</li>
-    <li>Speaker, PerfMattersConf 2020: "Shift Left"</li>
-    <li>Speaker, ID24 2019: "The Phenomenon Of The Unlucky Choice"</li>
-    <li>Speaker, EmberConf 2019: "Don't Break The Web"</li>
-    <li>Speaker, CSUN 2019: "Bringing Accessibility to the Ember.js Framework"</li>
-    <li>Speaker, A11yCamp Bay Area, 2019: "Building Accessible Applications with Ember.js"</li>
-    <li>Speaker, A11yCamp Chicago, 2018: "Let's Be Real"</li>
-    <li>Keynote, EmberFest 2018: "Comfortable with Uncertainty"</li>
-    <li>Speaker, EmberConf 2018: "Ambitious for All: Accessibility in Ember"</li>
-    <li>Speaker, Chicago Digital Accessibility and Inclusive Design Meetup: "Better Accessibility"</li>
-    <li>Speaker, SoEmber Conf 2017: "Building Accessible Applications: A Reasonable Approach"</li>
-</ul>
-
-<h3 class="py-4">Community Leadership (3/6)</h3>
-<ul class="list-disc list-inside">
-    <li>Invited Expert, WAI-ARIA Working Group</li>
-    <li>Member, Ember.js Core Team</li>
-    <li>Judge, CSS Design Awards</li>
-    <li>Organizer, Global Diversity CFP Day (Chicago, 2018)</li>
-    <li>Co-Chair, EmberCamp Chicago Conference Planning Committee(2018, 2019)</li>
-    <li>Member, EmberConf Program Committee(2018, 2019)</li>
-    <li>Technical Architect, Force For Good (Chicago)</li>
-    <li>Co-Organizer, Ember Chicago Meetup</li>
-    <li>Invited Expert, Accessible Technology and Information Working Group, UNC Chapel Hill</li>
-    <li>Advisory Board President, Carolina Technology Consultants, UNC Chapel Hill</li>
-</ul>
-
-<h3 class="py-4">Education (4/6)</h3>
-<ul class="list-disc list-inside">
-    <li>BA, Psychology, Ashford University</li>
-    <li>Certification, Information Systems Security Officer (ISSO)</li>
-    <li>Certification, Cryptologic Technician, National Cryptologic School, NSA</li>
-    <li>Certification, Modern Standard Arabic, Defense Language Institute Foreign Language Center (DLIFLC)</li>
-</ul>
-
-<h3 class="py-4">Awards (5/6)</h3>
-<ul class="list-disc list-inside">
-    <li>USN- Medal, Joint Service Achievement Medal</li>
-    <li>USN- Medal, Good Conduct(2)</li>
-    <li>USN- Medal, Global War on Terrorism</li>
-    <li>USN- Medal, National Defense Service</li>
-    <li>USN- CO Commendation, Navy Day Ball Organizing Committee</li>
-    <li>USN- CO Commendation, POW/MIA Ceremony Participation</li>
-</ul>
-
-<h3 class="py-4">Web Presence (6/6)</h3>
-<ul class="list-disc list-inside">
-    <li><a href="https://github.com/melsumner" rel="nofollow, noreferrer, external">GitHub</a></li>
-    <li><a href="https://codepen.io/melsumner" rel="nofollow, noreferrer, external">CodePen</a></li>
-    <li><a href="https://www.linkedin.com/in/melaniesumner/" rel="nofollow, noreferrer, external">LinkedIn</a></li>
-    <li><a href="https://noti.st/melsumner" rel="nofollow, noreferrer, external">Notist</a></li>
-</ul>
+<p class="mt-8 font-bold">A full, printable version of my resume is <a href="https://gist.github.com/MelSumner/a0ccfcbe85131d1a7bc8645fb890df5d" rel="external, noreferrer, nolink, nofollow">available on GitHub</a>.</p>
 
  </article>
