--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,6 +10,7 @@
         <li><LinkTo @route="index">Home</LinkTo></li>
         <li><LinkTo @route="resume">Resume</LinkTo></li>
         <li><LinkTo @route="talks">Talks</LinkTo></li>
+        <li><a href="https://melsumner.github.io">Blog</a></li>
       </ul>
     </nav>
 </header>
