--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,21 +1,20 @@
 {{page-title
-  'Melanie Sumner, Chicago-based Accessibility Engineer, Speaker, Author'
+  "Melanie Sumner, Chicago-based Accessibility Engineer, Speaker, Author"
 }}
 <article>
-  <p class='intro'>
-    My goal: make it easier for web developers to make accessible
+  <p class="intro">
+    My goal: make it easier to build accessible
     websites.
   </p>
-  <p class='mt-4'>
-    If you're in tech, you might already know my work, maybe from Ember.js, or
-    the WAI-ARIA Working Group. Maybe you've seen one of my talks on
-    accessibility, or have run across my slide decks on <a href="https://noti.st/melsumner" rel="nofollow, noreferrer, external">Notist</a>. Perhaps you've
+  <p class="mt-4">
+    If you"re in tech, you might already know my work, maybe from Ember.js, or
+    the WAI-ARIA Working Group. Maybe you"ve seen one of my talks on
+    accessibility, or have run across my slide decks on <a href="https://noti.st/melsumner" rel="nofollow, noreferrer, external">Notist</a>. Perhaps you"ve
     read some things I've written. No matter who you are or why you're on my
     website, I hope one thing is really clear-- I'm really passionate about
-    building things for the web. I started learning how to build things for the web in 1997 and haven't
-    looked back.
+    building things for the web.
   </p>
-  <p class='mt-4'>
+  <p class="mt-4">
     I am also a disabled military veteran and I'm proud of my time in service.
     I give back by serving on the board of Vets Who Code, an organization that helps veterans
     learn how to code and find jobs in tech. So if your company is hiring, reach
@@ -28,11 +27,11 @@
     <ul class="mx-auto">
         <li class="card">
             <div class="img">
-                <img src='/assets/images/a11y-automation.png' alt='' role="presentation" />
+                <img src="/assets/images/a11y-automation.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href='https://a11y-automation.dev'>A11y Automation Tracker</a>
+                    <a href="https://a11y-automation.dev">A11y Automation Tracker</a>
                 </h3>
                 <p>Tracks availability of automated checks for potential a11y violations.</p>
                 <small class="underline">https://a11y-automation.dev</small>
@@ -40,11 +39,11 @@
         </li>
         <li class="card">
             <div class="img">
-                <img src='/assets/images/why-ember.png' alt='' role="presentation" />
+                <img src="/assets/images/why-ember.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href='https://whyember.com'>Why Ember</a>
+                    <a href="https://whyember.com">Why Ember</a>
                 </h3>
                 <p>Why Ember should be the JavaScript framework you try for your next project.</p>
                 <small class="underline">https://whyember.com/</small>
@@ -52,23 +51,23 @@
         </li>
         <li class="card">
             <div class="img">
-                <img src='/assets/images/ember-a11y-for.png' alt='' role="presentation" />
+                <img src="/assets/images/how-to-fund.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href='https://ember-a11y-for.dev'>A11y for Ember Devs</a>
+                    <a href="https://pleasefunda11y.com">Please Fund A11y</a>
                 </h3>
-                <p>A step-by-step guide to making an accessible Ember application.</p>
-                <small class="underline">https://ember-a11y-for.dev</small>
+                <p>This guide outlines the places where open-source accessibility work would benefit from funding.</p>
+                <small class="underline">https://pleasefunda11y.com</small>
             </div>
         </li>
         <li class="card">
             <div class="img">
-                <img src='/assets/images/ember-a11y-refocus.png' alt='' role="presentation" />
+                <img src="/assets/images/ember-a11y-refocus.png" alt="" role="presentation" />
             </div>
             <div class="text">
                 <h3>
-                    <a href='https://github.com/ember-a11y/ember-a11y-refocus'>Ember A11y Refocus</a>
+                    <a href="https://github.com/ember-a11y/ember-a11y-refocus">Ember A11y Refocus</a>
                 </h3>
                 <p>A library that provides an accessible routing solution for Ember apps.</p>
                 <small class="underline">https://github.com/ember-a11y/ember-a11y-refocus</small>
