--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,8 +7,8 @@
     websites.
   </p>
   <p class="mt-4">
-    If you"re in tech, you might already know my work, maybe from Ember.js, or
-    the WAI-ARIA Working Group. Maybe you"ve seen one of my talks on
+    If you're in tech, you might already know my work, maybe from Ember.js or
+    the WAI-ARIA Working Group. Maybe you've seen one of my talks on
     accessibility, or have run across my slide decks on <a href="https://noti.st/melsumner" rel="nofollow, noreferrer, external">Notist</a>. Perhaps you"ve
     read some things I've written. No matter who you are or why you're on my
     website, I hope one thing is really clear-- I'm really passionate about
